@@ -501,6 +501,14 @@ struct ISBNValidator::isbn_band ISBNValidator::bands[] = {
   ISBNGRP_2DIGIT(80,    ISBNPUB_5DIGIT(89999),   7, 9),
   ISBNGRP_2DIGIT(80,    ISBNPUB_6DIGIT(949999),  8, 9),
 
+  /* Group 83 : Poland */
+  ISBNGRP_2DIGIT(83,    ISBNPUB_2DIGIT(19),      4, 9),
+  ISBNGRP_2DIGIT(83,    ISBNPUB_3DIGIT(599),     5, 9),
+  ISBNGRP_2DIGIT(83,    ISBNPUB_5DIGIT(69999),   7, 9),
+  ISBNGRP_2DIGIT(83,    ISBNPUB_4DIGIT(8499),    6, 9),
+  ISBNGRP_2DIGIT(83,    ISBNPUB_5DIGIT(89999),   7, 9),
+  ISBNGRP_2DIGIT(83,    ISBNPUB_6DIGIT(949999),  8, 9),
+
   /* Group 90 * Netherlands */
   ISBNGRP_2DIGIT(90,    ISBNPUB_2DIGIT(19),      4, 9),
   ISBNGRP_2DIGIT(90,    ISBNPUB_3DIGIT(499),     5, 9),
